# mana

./: README.md  README.org  pyproject.toml
mana/: __init__.py  __main__.py  cli.py  favorites.py  init_manager.py
mana/config/: __init__.py
mana/manpage/: __init__.py  discovery.py  parser.py
mana/rag/: __init__.py  database.py  embeddings.py
mana/ui/: __init__.py  progress.py  tui.py
